finish mobile version

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Space+Mono:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Space+Mono:wght@400;700&family=Montserrat:wght@500;700&display=swap"
       rel="stylesheet"
     />
 
@@ -15,17 +15,20 @@
     <title>404 Not Found</title>
   </head>
   <body>
-    <header class="title">404 not found</header>
-    <div class="content">
+    <div class="container">
+      <header class="font-condensed">404 not found</header>
       <img src="Scarecrow.png" alt="Scarecrow" />
       <div>
-        <h1>I have bad news for you</h1>
-        <h3>
+        <h1 class="title">I have bad news for you</h1>
+        <p>
           The page you are looking for might be removed or is temporarily
           unavailable
-        </h3>
-        <button>Back to homepage</button>
+        </p>
       </div>
+      <button>Back to homepage</button>
+      <footer>
+        created by <span class="strong">Angel</span> - devChallenges.io
+      </footer>
     </div>
   </body>
 </html>
