Finished the desktop version

--- a/index.html
+++ b/index.html
@@ -15,20 +15,26 @@
     <title>404 Not Found</title>
   </head>
   <body>
-    <div class="container">
+    <section class="container push flow" style="--flow: 3.5rem">
       <header class="font-condensed">404 not found</header>
-      <img src="Scarecrow.png" alt="Scarecrow" />
-      <div>
-        <h1 class="title">I have bad news for you</h1>
-        <p>
-          The page you are looking for might be removed or is temporarily
-          unavailable
-        </p>
+      <div class="m-flex">
+        <div class="lhs">
+          <img src="Scarecrow.png" alt="Scarecrow" />
+        </div>
+        <div class="rhs flow" style="--flow: 3.5rem">
+          <div class="flow" style="--flow: 1.5em">
+            <h1 class="title">I have bad news for you</h1>
+            <p>
+              The page you are looking for might be removed or is temporarily
+              unavailable
+            </p>
+          </div>
+          <button>Back to homepage</button>
+        </div>
       </div>
-      <button>Back to homepage</button>
       <footer>
         created by <span class="strong">Angel</span> - devChallenges.io
       </footer>
-    </div>
+    </section>
   </body>
 </html>
