--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <section class="container push flow" style="--flow: 3.5rem">
-      <header class="font-condensed">404 not found</header>
+      <header class="">404 not found</header>
       <div class="m-flex">
         <div class="lhs">
           <img src="Scarecrow.png" alt="Scarecrow" />
